<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskDetailsActivity">

    <LinearLayout
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/amber"
        android:padding="16dp"
        android:layout_alignParentTop="true">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back_button"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/baseline_arrow_back_24"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:text="@string/task_details"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_below="@id/titleBar">

        <TextView
            android:id="@+id/taskViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/taskViewDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/statusLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:text="@string/status"
                android:layout_marginTop="16dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/taskDetailsStatus"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingButtonEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="24dp"
        android:backgroundTint="@color/amber"
        android:contentDescription="@string/edit_todo_button"
        android:src="@drawable/baseline_edit_24"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingButtonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/floatingButtonEdit"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="24dp"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/amber"
        android:contentDescription="@string/edit_todo_button"
        android:src="@drawable/baseline_delete_24"
        app:tint="@color/white" />

</RelativeLayout>